fix spacing

--- a/public/stylesheets/iphone_stylesheet.css
+++ b/public/stylesheets/iphone_stylesheet.css
@@ -10,7 +10,7 @@ textarea { font: 14pt Arial; }
 
 .moduletitle
 {
-	font-weight: normal; font-size: 14pt;
+	font-weight: normal; font-size: 12pt;
 	margin-left: 2px; margin-top: 4px; margin-bottom: 5px
 }
 
@@ -38,7 +38,7 @@ textarea { font: 14pt Arial; }
 
 #menu
 {
-	margin-bottom: 5px;
+	margin-bottom: 5px; position: fixed; background-color: white;
 }
 
 #menu .menuitem
@@ -47,7 +47,7 @@ textarea { font: 14pt Arial; }
 	margin-top: 1px;
 	background-color: #888888;
 	color: white;
-	width: 55px;
+	width: 60px;
 	display: inline-block;
 }
 
@@ -57,7 +57,7 @@ textarea { font: 14pt Arial; }
 	margin-top: 1px;
 	background-color: #0000DD;
 	color: white;
-	width: 55px;
+	width: 60px;
 	display: inline-block;
 }
 
@@ -67,7 +67,7 @@ textarea { font: 14pt Arial; }
 	margin-top: 1px;
 	background-color: #00DD00;
 	color: white;
-	width: 55px;
+	width: 60px;
 	display: inline-block;
 }
 
@@ -77,7 +77,7 @@ textarea { font: 14pt Arial; }
 	margin-top: 1px;
 	background-color: #DD0000;
 	color: white;
-	width: 55px;
+	width: 60px;
 	display: inline-block;
 }
 
@@ -89,13 +89,13 @@ textarea { font: 14pt Arial; }
 
 #pagetitle
 {
-	font: 14pt Arial;
+	font: 12pt Arial;
 	padding-bottom: 5px;
 }
 
 #pageheader
 {
-	padding-top: 2px;
+	padding-top: 20px;
 	padding-bottom: 2px;
 }
 
